index.html update
Removed the "DISCORD" button. Bugging, added new content.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
     <p><bold><center><big>Coming soon...</big></center></bold></p>
 
 
-    <a
-      href="https://dsc.gg/pixelheim/"
-      style="color: white; font-size: 60px"
-      ><button type="button" style="background-color: red; font-size: 60px;">
-        <big>DISCORD</big>
-      </button></a
-    ><br />
+    <p>Why don't you join our discord while waiting for PixelHeim 3.0 to be released? <a href="https://dsc.gg/pixelheim">Click here to join our discord</a></p>
     
 </body>
 </html>
